# amisr-toolkit

./: LICENSE  MANIFEST.in  README.rst  pyproject.toml
src/amisr_toolkit/: __init__.py  aeustatus.py  array_xml.py
src/amisr_toolkit/apps/: array_xml_to_json.py  demo.py
tests/: 20240126-025800-pfisr.xml.bz2  test_aeustatus.py  test_array_status.py
